...
      }
      IconActionButton(
        key = AllIconsKeys.RunConfigurations.TestState.Run,
        onClick = {
          onExecute(scenarioStateHolder)
        },
        contentDescription = "Run",
        hint = Size(28)
      ) {
        Text(
          text = "Run with the dependent scenarios",
        )
      }
...
      val maxHeightValue = maxHeight
      ExpandableSection(
        title = "Options",
        modifier = Modifier.fillMaxWidth()
      ) {
        Column(
          modifier = Modifier.testTag("scenario_options")
            .heightIn(max = maxHeightValue * 0.7f)
            .verticalScroll(rememberScrollState())
            .wrapContentHeight(unbounded = true)
        ) {
          ScenarioOptions(scenarioStateHolder, scenarioCountById, dependencyScenarioMenu, onShowFixedScenariosDialog, getFixedScenarioById, mcpServerNames)
        }
...
        // Add button
        IconActionButton(
          key = AllIconsKeys.General.Add,
          onClick = {
            updatedScenarioStateHolder.onAddImageAssertion()
          },
          contentDescription = "Add image assertion",
          hint = Size(16),
        ) {
          Text(
            text = "Add image assertion",
          )
        }
...
              modifier = Modifier.padding(4.dp),
              text = "Image assertion ${index + 1}"
            )
            ValueTextField(
              modifier = Modifier
                .padding(4.dp)
                .testTag("image_assertion"),
              placeholder = "XX button should exist",
              value = imageAssertion.assertionPrompt,
              onValueChange = {
                val newImageAssertions = imageAssertions.toMutableList()
                newImageAssertions[index] = imageAssertion.copy(assertionPrompt = it)
                updatedScenarioStateHolder.imageAssertionsStateFlow.value = newImageAssertions
...
